--- a/get-your-van-road-ready.html
+++ b/get-your-van-road-ready.html
@@ -13,61 +13,62 @@
 </head>
 
 <body>
-    <div class="content-wrapper">
-        <header>
-            <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
-            <nav class="navbar navbar-expand-md bg-nav">
-                <div class="container-fluid">
-                    <a class="navbar-brand logo" href="index.html">&nbsp;</a>
-                    <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="toggle-icon"><i class="fas fa-bars"></i></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <div class="navigation">
-                            <ul class="navbar-nav mx-auto">
-                                <li class="nav-item">
-                                    <a class="nav-link link" href="ourstory.html">Our Story</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link link" href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="d-md-none d-lg-block">
-                            <ul class="nav-social">
-                                <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                        target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
-                                <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                        target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
-                            </ul>
-                        </div>
+    <header>
+        <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
+        <nav class="navbar navbar-expand-md bg-nav">
+            <div class="container-fluid max-nav">
+                <a class="navbar-brand logo" href="index.html">&nbsp;</a>
+                <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggle-icon"><i class="fas fa-bars"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="navigation">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item">
+                                <a class="nav-link link" href="ourstory.html">Our Story</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="diycamperconversion.html">DIY Camper Conversion</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="vanlifeireland.html">Vanlife in Ireland</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link link" href="contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="d-md-none d-lg-block">
+                        <ul class="nav-social">
+                            <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
+                                    target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                            <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
+                                    target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                        </ul>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <!-- Banner Section -->
-        <section class="container-fluid g-0">
-            <div class="banner-image-camper-conversion">
-                <div class="banner-text">
-                    <h1 class="h1">DIY Camper Conversion</h1>
-                </div>
             </div>
-        </section>
+        </nav>
+    </header>
+    <!-- Banner Section -->
+    <section class="container-fluid g-0">
+        <div class="banner-image-camper-conversion">
+            <div class="banner-text">
+                <h1 class="h1">DIY Camper Conversion</h1>
+            </div>
+        </div>
+    </section>
+    <main class="max-body">
         <!-- Breadcrumb-->
         <section class="container breadcrumb-container">
             <h6 class="d-none">&nbsp;</h6>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="breadcrumb-link" href="diycamperconversion.html">DIY Camper
+                    <li class="breadcrumb-item"><a class="breadcrumb-link" href="diycamperconversion.html">DIY
+                            Camper
                             Conversion</a></li>
                     <li class="breadcrumb-item" aria-current="page"><a class="breadcrumb-link breadcrumb-live"
                             href="get-your-van-road-ready.html">5 Steps To Get Your Van Road Ready</a></li>
@@ -81,12 +82,15 @@
                 <p>Before getting started on your conversion, it’s best to know how to get it legally on
                     the road. When
                     you
-                    begin your research, you'll find that in Ireland the process can be a little bit confusing, and the
-                    required information is a bit all over the place. Here is a step by step guide to help you get clear
+                    begin your research, you'll find that in Ireland the process can be a little bit confusing, and
+                    the
+                    required information is a bit all over the place. Here is a step by step guide to help you get
+                    clear
                     on
                     what needs to be done, and in what order.
                     <br><br>
-                    The first thing to know is that to get your camper insured, it first must be registered as a motor
+                    The first thing to know is that to get your camper insured, it first must be registered as a
+                    motor
                     caravan on the logbook. In the eyes of Revenue, for a self-converted van to be considered a
                     motor
                     caravan, it must have the following: </p>
@@ -97,16 +101,20 @@
                     <li>Storage facilities</li>
                 </ul>
                 <p>When it comes to cooking facilities and gas, Revenue state that a Gas
-                    Installer Certificate should be made available. In my experience, this is not the case. That said,
+                    Installer Certificate should be made available. In my experience, this is not the case. That
+                    said,
                     when
-                    installing gas, it is recommended that you use a registered gas installer. Having your gas installed
+                    installing gas, it is recommended that you use a registered gas installer. Having your gas
+                    installed
                     by
                     an
-                    RGI will give you peace of mind, and the certificate will be of benefit should you ever be selling
+                    RGI will give you peace of mind, and the certificate will be of benefit should you ever be
+                    selling
                     your
                     camper in the future.
                     <br><br>
-                    Below I have set out five key steps to getting your van on the road, one before you start your build
+                    Below I have set out five key steps to getting your van on the road, one before you start your
+                    build
                     and
                     four once you’ve completed your build. This article does not go into specifics on the build
                     itself. You can find information on how to convert your van <a href="diycamperconversion.html"
@@ -122,10 +130,13 @@
                     in
                     Ireland, as mentioned above, there are only basic standardized requirements set out by Revenue
                     to
-                    convert a commercial vehicle into a camper. Most insurance providers have additional requirements
-                    relating to different areas of your build, particularly gas installation. It’s a good idea to speak
+                    convert a commercial vehicle into a camper. Most insurance providers have additional
+                    requirements
+                    relating to different areas of your build, particularly gas installation. It’s a good idea to
+                    speak
                     to
-                    the insurance provider before getting started, avoiding any nasty surprises when it comes time to
+                    the insurance provider before getting started, avoiding any nasty surprises when it comes time
+                    to
                     get
                     the van insured. In Ireland, you have three options, <a class="bodylink"
                         href="https://www.dolmen-insurance.ie/" target="_blank">Dolmen Insurances</a>, <a
@@ -137,18 +148,22 @@
                 <h2 class="bp-heading">Post Build</h2>
                 <hr class="hori">
                 <h3 class="bp-heading">Step 2: Get your van weighed.</h3>
-                <p>Before your van can be inspected by an SQI (step three), you will need to find a weighbridge in your
-                    local area and have your van weighed. Your best bet is to try a local recycling centre. I used <a
-                        href="http://marrakeshltd.com/" class="bodylink" target="_blank"> Marrakesh
+                <p>Before your van can be inspected by an SQI (step three), you will need to find a weighbridge in
+                    your
+                    local area and have your van weighed. Your best bet is to try a local recycling centre. I used
+                    <a href="http://marrakeshltd.com/" class="bodylink" target="_blank"> Marrakesh
                         Recycling Centre</a> in Kilmacanogue, Co. Wicklow, costing €20.
                 </p>
                 <br>
                 <h3 class="bp-heading">Step 3: Have your van inspected.</h3>
-                <p>It’s now time to get an SQI (suitably qualified individual) to certify your conversion. In this case,
+                <p>It’s now time to get an SQI (suitably qualified individual) to certify your conversion. In this
+                    case,
                     it
-                    will be an automotive engineer. The SQI will inspect the vehicle, make sure the conversion is up to
+                    will be an automotive engineer. The SQI will inspect the vehicle, make sure the conversion is up
+                    to
                     spec
-                    and provide the necessary declaration. The SQI will also take photos of the interior and exterior of
+                    and provide the necessary declaration. The SQI will also take photos of the interior and
+                    exterior of
                     your van. These will need to be submitted to Revenue along with your declaration. The cost of
                     the
                     inspection is in the ballpark of €200.
@@ -169,7 +184,8 @@
                     <li>Conversion photographs</li>
                     <li>Cover letter and conversion receipts</li>
                 </ul>
-                <p>Your cover letter should briefly outline how you went about your conversion and the associated cost.
+                <p>Your cover letter should briefly outline how you went about your conversion and the associated
+                    cost.
                     I
                     have created a cover letter template that you can download <a href="camper-reg-cover-template.docx"
                         class="bodylink" target="_blank">here</a>.
@@ -191,7 +207,8 @@
                     camper can be officially registered and insured.</p>
                 <br>
                 <h3 class="bp-heading">Step 5: Insuring your van.</h3>
-                <p>Your DIY conversion is officially a camper! You can now go about insuring. As mentioned earlier, you
+                <p>Your DIY conversion is officially a camper! You can now go about insuring. As mentioned earlier,
+                    you
                     have three options, <a class="bodylink" href="https://www.dolmen-insurance.ie/"
                         target="_blank">Dolmen
                         Insurances</a>, <a class="bodylink" href="https://www.campervaninsurance.ie/"
@@ -206,7 +223,8 @@
                     <br><br>
                     And that’s it! As I said, when looking online, this information tends to be a bit all over the
                     place. I
-                    hope that you now have a clear understanding of the process and what’s involved. Should you have any
+                    hope that you now have a clear understanding of the process and what’s involved. Should you have
+                    any
                     questions, feel free to <a href="contact.html" class="bodylink">get in touch</a>.
                 </p>
             </div>
@@ -217,7 +235,7 @@
             <a href="diycamperconversion.html" class="btn btn-read-on">See more on DIY conversions <i
                     class="fas fa-arrow-circle-right"></i></a>
         </section>
-    </div>
+    </main>
     <footer class="container-fluid">
         <div class="row footer-section">
             <div class="col">
