--- a/ourstory.html
+++ b/ourstory.html
@@ -64,50 +64,62 @@
                 </ol>
             </nav>
         </section>
-        <!-- Our Story Section -->
-        <section class="container-fluid d-flex justify-content-center">
-            <h2 class="d-none">Our Story</h2>
-            <div class="row biosection">
-                <div class="col-12">
-                    <!-- Profile Image -->
-                    <div class="os-bioimage"></div>
-                </div>
-                <div class="col-12 bio-text-section">
-                    <!-- Bio -->
-                    <div class="ourstory-bio">
-                        <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George, I'm 25, and I live
-                            and
-                            travel full-time in my van, 'Goats Cheese', with my little rotti companion, Zayda.
-                            Originally
-                            from Dublin, we travel all over Ireland and soon Europe, surfing, hiking, and exploring.
-                            <br><br>
-                            So why, vanlife? Three reasons, to travel, to experience more of the outdoors, and to live
-                            with
-                            less. Striping your life back to what you can fit in a 3m x 2m space is challenging but so
-                            rewarding. It has forced me to shift my perspective on what's important and what I
-                            fundamentally
-                            need to be happy.
-                            <br><br>
-                            So why the blog? With the size of the vanlife community worldwide, there is no shortage of
-                            resources available for people looking to take on their own conversions or to get a glimpse
-                            of
-                            what living and travelling full-time in a van is really like. When doing my own research, I
-                            found there to be far less information out there from an Irish perspective. Getting a van on
-                            the
-                            road in Ireland is surprisingly tricky. There are a lot of hoops to jump through when it
-                            comes
-                            to converting, registering, and insuring, so I decided to document my experience to help
-                            others
-                            who might be thinking of building a tiny home on wheels, for weekends away or for full-time
-                            living.
-                            <br><br>
-                            I hope you find the resources here helpful and if you have any questions, please feel free
-                            to
-                            get in touch either <a href="contact.html" class="bodylink">here</a> or on social media.</p>
+        <main class="max-body">
+            <!-- Our Story Section -->
+            <section class="container-fluid d-flex justify-content-center">
+                <h2 class="d-none">Our Story</h2>
+                <div class="row biosection">
+                    <div class="col-12">
+                        <!-- Profile Image -->
+                        <div class="os-bioimage"></div>
+                    </div>
+                    <div class="col-12 bio-text-section">
+                        <!-- Bio -->
+                        <div class="ourstory-bio">
+                            <p>Welcome to the Freedom Project, an Irish vanlife blog! My name is George, I'm 25, and I
+                                live
+                                and
+                                travel full-time in my van, 'Goats Cheese', with my little rotti companion, Zayda.
+                                Originally
+                                from Dublin, we travel all over Ireland and soon Europe, surfing, hiking, and exploring.
+                                <br><br>
+                                So why, vanlife? Three reasons, to travel, to experience more of the outdoors, and to
+                                live
+                                with
+                                less. Striping your life back to what you can fit in a 3m x 2m space is challenging but
+                                so
+                                rewarding. It has forced me to shift my perspective on what's important and what I
+                                fundamentally
+                                need to be happy.
+                                <br><br>
+                                So why the blog? With the size of the vanlife community worldwide, there is no shortage
+                                of
+                                resources available for people looking to take on their own conversions or to get a
+                                glimpse
+                                of
+                                what living and travelling full-time in a van is really like. When doing my own
+                                research, I
+                                found there to be far less information out there from an Irish perspective. Getting a
+                                van on
+                                the
+                                road in Ireland is surprisingly tricky. There are a lot of hoops to jump through when it
+                                comes
+                                to converting, registering, and insuring, so I decided to document my experience to help
+                                others
+                                who might be thinking of building a tiny home on wheels, for weekends away or for
+                                full-time
+                                living.
+                                <br><br>
+                                I hope you find the resources here helpful and if you have any questions, please feel
+                                free
+                                to
+                                get in touch either <a href="contact.html" class="bodylink">here</a> or on social media.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
     </div>
     <footer class="container-fluid">
         <div class="row footer-section">
