--- a/vanlifeireland.html
+++ b/vanlifeireland.html
@@ -17,7 +17,7 @@
         <header>
             <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
             <nav class="navbar navbar-expand-md bg-nav">
-                <div class="container-fluid">
+                <div class="container-fluid max-nav">
                     <a class="navbar-brand logo" href="index.html">&nbsp;</a>
                     <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,16 +61,19 @@
                 </div>
             </div>
         </section>
-        <!-- Coming Soon -->
-        <section class="container-fluid d-flex justify-content-center">
-            <div class="row  coming-soon">
-                <div class="col-12">
-                    <h1 class="coming-soon-heading">Coming Soon</h1>
-                    <p class="coming-soon-text">Thanks for showing interest in what my blog has to offer. I am currently
-                        working on some great articles all about full-time vanlife in Ireland. Check back soon!</p>
+        <main class="max-body">
+            <!-- Coming Soon -->
+            <section class="container-fluid d-flex justify-content-center">
+                <div class="row  coming-soon">
+                    <div class="col-12">
+                        <h1 class="coming-soon-heading">Coming Soon</h1>
+                        <p class="coming-soon-text">Thanks for showing interest in what my blog has to offer. I am
+                            currently
+                            working on some great articles all about full-time vanlife in Ireland. Check back soon!</p>
+                    </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
     </div>
     <footer class="container-fluid">
         <div class="row footer-section">
