--- a/diycamperconversion.html
+++ b/diycamperconversion.html
@@ -17,7 +17,7 @@
         <header>
             <!-- Responsive nav sourced from Bootstrap (https://getbootstrap.com/docs/5.0/components/navbar/) -->
             <nav class="navbar navbar-expand-md bg-nav">
-                <div class="container-fluid">
+                <div class="container-fluid max-nav">
                     <a class="navbar-brand logo" href="index.html">&nbsp;</a>
                     <button class="toggle-nav d-md-none" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,40 +61,42 @@
                 </div>
             </div>
         </section>
-        <!-- Breadcrumb-->
-        <section class="container breadcrumb-container">
-            <h6 class="d-none">&nbsp;</h6>
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a class="breadcrumb-link breadcrumb-live"
-                            href="diycamperconversion.html">DIY Camper
-                            Conversion</a></li>
-                </ol>
-            </nav>
-        </section>
-        <!-- Blog Articles -->
-        <section class="container">
-            <div class="row list-snippet-container">
-                <div class="col-12 d-flex justify-content-center snippet-container">
-                    <div class="row">
-                        <div class="col-12 col-md-4 g-0 snippet-img-container">
-                            <!-- .snippet-img-container: sets img height across screen sizes. Removes need to repeat thumbnail img class for different screen sizes. Important as many thumbnail imgs will be present on this page as site grows -->
-                            <div class="card-img-left-1 snippet-card-img"></div>
-                            <!-- .snippet-card-img: sets border radius for img 1024 px + -->
-                        </div>
-                        <div class="col-12 col-md-8 snippet-card-body">
-                            <h5 class="snippet-card-title">5 Steps To Get Your Van Road Ready</h5>
-                            <p class="snippet-card-text">Getting a self converted van on the road in Ireland can be
-                                suprisingly
-                                tricky. Here I have a handy step by step guide on how to get your home on wheels
-                                registered, taxed, insured, and ready for the open road.</p>
-                            <a href="get-your-van-road-ready.html" class="btn btn-snippet">Check it out</a>
+        <main class="max-body">
+            <!-- Breadcrumb-->
+            <section class="container breadcrumb-container">
+                <h6 class="d-none">&nbsp;</h6>
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a class="breadcrumb-link" href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a class="breadcrumb-link breadcrumb-live"
+                                href="diycamperconversion.html">DIY Camper
+                                Conversion</a></li>
+                    </ol>
+                </nav>
+            </section>
+            <!-- Blog Articles -->
+            <section class="container">
+                <div class="row list-snippet-container">
+                    <div class="col-12 d-flex justify-content-center snippet-container">
+                        <div class="row">
+                            <div class="col-12 col-md-4 g-0 snippet-img-container">
+                                <!-- .snippet-img-container: sets img height across screen sizes. Removes need to repeat thumbnail img class for different screen sizes. Important as many thumbnail imgs will be present on this page as site grows -->
+                                <div class="card-img-left-1 snippet-card-img"></div>
+                                <!-- .snippet-card-img: sets border radius for img 1024 px + -->
+                            </div>
+                            <div class="col-12 col-md-8 snippet-card-body">
+                                <h5 class="snippet-card-title">5 Steps To Get Your Van Road Ready</h5>
+                                <p class="snippet-card-text">Getting a self converted van on the road in Ireland can be
+                                    suprisingly
+                                    tricky. Here I have a handy step by step guide on how to get your home on wheels
+                                    registered, taxed, insured, and ready for the open road.</p>
+                                <a href="get-your-van-road-ready.html" class="btn btn-snippet">Check it out</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+        </main>
     </div>
     <footer class="container-fluid">
         <div class="row footer-section">
